--- a/cnn_approach.ipynb
+++ b/cnn_approach.ipynb
@@ -26,13 +26,57 @@
     "from torch import optim\n",
     "from torch import nn\n",
     "from torch.utils.data import DataLoader\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "\n",
+    "from dataset_loader import SEGMENTATION_DATASET"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "5f213f77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([32, 3, 224, 224]) torch.Size([32, 3, 224, 224])\n"
+     ]
+    }
+   ],
+   "source": [
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize((224, 224)),\n",
+    "    transforms.ToTensor()\n",
+    "])\n",
+    "\n",
+    "# Create dataset\n",
+    "train_dataset = SEGMENTATION_DATASET(\n",
+    "    \"/Users/tejasdhopavkar/Documents/MS/Saarland_University/Semester_1/Machine Learning/Project/dataset/training/ground_truth\",\n",
+    "    \"/Users/tejasdhopavkar/Documents/MS/Saarland_University/Semester_1/Machine Learning/Project/dataset/training/ground_truth\",\n",
+    "    transform\n",
+    ")\n",
+    "\n",
+    "test_dataset = SEGMENTATION_DATASET(\n",
+    "    \"/Users/tejasdhopavkar/Documents/MS/Saarland_University/Semester_1/Machine Learning/Project/dataset/test/images\",\n",
+    "    \"/Users/tejasdhopavkar/Documents/MS/Saarland_University/Semester_1/Machine Learning/Project/dataset/training/ground_truth\",\n",
+    "    transform\n",
+    ")\n",
+    "\n",
+    "# Create DataLoader\n",
+    "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True, num_workers=2)\n",
+    "test_loader = DataLoader(test_dataset)\n",
+    "\n",
+    "# Example batch\n",
+    "images, labels = next(iter(train_loader))\n",
+    "print(images.shape, labels.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88b6abea",
    "metadata": {},
    "outputs": [],
    "source": []
