--- a/cnn_approach.ipynb
+++ b/cnn_approach.ipynb
@@ -13,6 +13,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "26bdc1cd",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "aa1ba929",
@@ -28,12 +36,22 @@
     "from torch.utils.data import DataLoader\n",
     "from tqdm import tqdm\n",
     "\n",
-    "from dataset_loader import SEGMENTATION_DATASET"
+    "from dataset_loader import SEGMENTATION_DATASET\n",
+    "from cnn_model import CNN_MODEL\n",
+    "from cnn_config import cnn_experiment_1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ca419da",
+   "metadata": {},
+   "source": [
+    "### Data Loader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5f213f77",
    "metadata": {},
    "outputs": [
@@ -41,7 +59,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([32, 3, 224, 224]) torch.Size([32, 3, 224, 224])\n"
+      "torch.Size([1, 3, 224, 224]) torch.Size([1, 3, 224, 224])\n"
      ]
     }
    ],
@@ -65,8 +83,8 @@
     ")\n",
     "\n",
     "# Create DataLoader\n",
-    "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True, num_workers=2)\n",
-    "test_loader = DataLoader(test_dataset)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=1, shuffle=True, num_workers=0)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=1, shuffle=False, num_workers=0)\n",
     "\n",
     "# Example batch\n",
     "images, labels = next(iter(train_loader))\n",
@@ -74,9 +92,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8a307334",
+   "metadata": {},
+   "source": [
+    "### Model, criterion, optimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "88b6abea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = CNN_MODEL(cnn_experiment_1['model_args']['input_size'], cnn_experiment_1['model_args']['hidden_layers'], cnn_experiment_1['model_args']['activation'], cnn_experiment_1['model_args']['norm_layer'], cnn_experiment_1['model_args']['drop_prob'], cnn_experiment_1['model_args']['max_pooling'])\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-4)\n",
+    "loss = nn.CrossEntropyLoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "839e392e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CNN_MODEL(\n",
+       "  (features): Sequential(\n",
+       "    (0): Conv2d(3, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (1): ReLU()\n",
+       "    (2): Conv2d(128, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (3): ReLU()\n",
+       "    (4): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (5): ReLU()\n",
+       "    (6): Conv2d(512, 1024, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (7): ReLU()\n",
+       "    (8): Conv2d(1024, 1024, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (9): ReLU()\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88b6abea",
+   "id": "767f7a02",
    "metadata": {},
    "outputs": [],
    "source": []
