--- a/cnn_approach.ipynb
+++ b/cnn_approach.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "aa1ba929",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,9 @@
     "\n",
     "from dataset_loader import SEGMENTATION_DATASET\n",
     "from cnn_model import CNN_MODEL\n",
-    "from cnn_config import cnn_experiment_1"
+    "from cnn_config import cnn_experiment_1\n",
+    "\n",
+    "from trainer_evaluator import TRAINER_EVALUATOR"
    ]
   },
   {
@@ -59,26 +61,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1, 3, 224, 224]) torch.Size([1, 3, 224, 224])\n"
+      "torch.Size([1, 3, 375, 500]) torch.Size([1, 3, 375, 500])\n"
      ]
     }
    ],
    "source": [
     "transform = transforms.Compose([\n",
-    "    transforms.Resize((224, 224)),\n",
     "    transforms.ToTensor()\n",
     "])\n",
     "\n",
     "# Create dataset\n",
     "train_dataset = SEGMENTATION_DATASET(\n",
-    "    \"/Users/tejasdhopavkar/Documents/MS/Saarland_University/Semester_1/Machine Learning/Project/dataset/training/ground_truth\",\n",
-    "    \"/Users/tejasdhopavkar/Documents/MS/Saarland_University/Semester_1/Machine Learning/Project/dataset/training/ground_truth\",\n",
+    "    \"/Users/tejasdhopavkar/Documents/MS/Saarland_University/Semester_1/ML/Project/dataset/training/ground_truth\",\n",
+    "    \"/Users/tejasdhopavkar/Documents/MS/Saarland_University/Semester_1/ML/Project/dataset/training/ground_truth\",\n",
     "    transform\n",
     ")\n",
     "\n",
     "test_dataset = SEGMENTATION_DATASET(\n",
-    "    \"/Users/tejasdhopavkar/Documents/MS/Saarland_University/Semester_1/Machine Learning/Project/dataset/test/images\",\n",
-    "    \"/Users/tejasdhopavkar/Documents/MS/Saarland_University/Semester_1/Machine Learning/Project/dataset/training/ground_truth\",\n",
+    "    \"/Users/tejasdhopavkar/Documents/MS/Saarland_University/Semester_1/ML/Project/dataset/test/images\",\n",
+    "    \"/Users/tejasdhopavkar/Documents/MS/Saarland_University/Semester_1/ML/Project/dataset/training/ground_truth\",\n",
     "    transform\n",
     ")\n",
     "\n",
@@ -146,9 +147,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eb3484c0",
+   "metadata": {},
+   "source": [
+    "### Model training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "767f7a02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training started...\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'TRAINER_EVALUATOR' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTraining started...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m trainer_evaluator \u001b[38;5;241m=\u001b[39m TRAINER_EVALUATOR()\n\u001b[1;32m      3\u001b[0m trainer_evaluator\u001b[38;5;241m.\u001b[39mtrain_cnn(model, train_loader, optimizer, loss, \u001b[38;5;241m5\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'TRAINER_EVALUATOR' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Training started...\")\n",
+    "trainer_evaluator = TRAINER_EVALUATOR()\n",
+    "trainer_evaluator.train_cnn(model, train_loader, optimizer, loss, 5)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "767f7a02",
+   "id": "75a61384",
    "metadata": {},
    "outputs": [],
    "source": []
