--- a/cnn_approach.ipynb
+++ b/cnn_approach.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "aa1ba929",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "5f213f77",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "88b6abea",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "839e392e",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
        ")"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "767f7a02",
    "metadata": {},
    "outputs": [
@@ -168,14 +168,14 @@
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'TRAINER_EVALUATOR' is not defined",
+     "ename": "AttributeError",
+     "evalue": "'TRAINER_EVALUATOR' object has no attribute 'train_cnn'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTraining started...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m trainer_evaluator \u001b[38;5;241m=\u001b[39m TRAINER_EVALUATOR()\n\u001b[1;32m      3\u001b[0m trainer_evaluator\u001b[38;5;241m.\u001b[39mtrain_cnn(model, train_loader, optimizer, loss, \u001b[38;5;241m5\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'TRAINER_EVALUATOR' is not defined"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTraining started...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      2\u001b[0m trainer_evaluator \u001b[38;5;241m=\u001b[39m TRAINER_EVALUATOR()\n\u001b[0;32m----> 3\u001b[0m trainer_evaluator\u001b[38;5;241m.\u001b[39mtrain_cnn(model, train_loader, optimizer, loss, \u001b[38;5;241m5\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'TRAINER_EVALUATOR' object has no attribute 'train_cnn'"
      ]
     }
    ],
