Completed training loop

--- a/cnn_approach.ipynb
+++ b/cnn_approach.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "aa1ba929",
    "metadata": {},
    "outputs": [],
@@ -35,6 +35,7 @@
     "from torch import nn\n",
     "from torch.utils.data import DataLoader\n",
     "from tqdm import tqdm\n",
+    "from PIL import Image\n",
     "\n",
     "from dataset_loader import SEGMENTATION_DATASET\n",
     "from cnn_model import CNN_MODEL\n",
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "5f213f77",
    "metadata": {},
    "outputs": [
@@ -102,19 +103,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "88b6abea",
    "metadata": {},
    "outputs": [],
    "source": [
     "model = CNN_MODEL(cnn_experiment_1['model_args']['input_size'], cnn_experiment_1['model_args']['hidden_layers'], cnn_experiment_1['model_args']['activation'], cnn_experiment_1['model_args']['norm_layer'], cnn_experiment_1['model_args']['drop_prob'], cnn_experiment_1['model_args']['max_pooling'])\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=1e-4)\n",
-    "loss = nn.CrossEntropyLoss()"
+    "loss = nn.BCEWithLogitsLoss()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "839e392e",
    "metadata": {},
    "outputs": [
@@ -129,15 +130,15 @@
        "    (3): ReLU()\n",
        "    (4): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
        "    (5): ReLU()\n",
-       "    (6): Conv2d(512, 1024, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (6): Conv2d(512, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
        "    (7): ReLU()\n",
-       "    (8): Conv2d(1024, 1024, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (8): Conv2d(128, 3, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
        "    (9): ReLU()\n",
        "  )\n",
        ")"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "767f7a02",
    "metadata": {},
    "outputs": [
@@ -164,18 +165,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training started...\n"
+      "Training started...\n",
+      "Epoch 0: Started training\n",
+      "Total loss after epoch 0: 0.695156991481781\n",
+      "Epoch 0: Started training\n",
+      "Total loss after epoch 0: 1.388304352760315\n",
+      "Epoch 0: Started training\n",
+      "Total loss after epoch 0: 2.081451714038849\n",
+      "Epoch 0: Started training\n",
+      "Total loss after epoch 0: 2.774599075317383\n",
+      "Epoch 0: Started training\n",
+      "Total loss after epoch 0: 3.4677464365959167\n",
+      "Epoch 0: Started training\n",
+      "Total loss after epoch 0: 4.160893797874451\n",
+      "Epoch 0: Started training\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'TRAINER_EVALUATOR' object has no attribute 'train_cnn'",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTraining started...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      2\u001b[0m trainer_evaluator \u001b[38;5;241m=\u001b[39m TRAINER_EVALUATOR()\n\u001b[0;32m----> 3\u001b[0m trainer_evaluator\u001b[38;5;241m.\u001b[39mtrain_cnn(model, train_loader, optimizer, loss, \u001b[38;5;241m5\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'TRAINER_EVALUATOR' object has no attribute 'train_cnn'"
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTraining started...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      2\u001b[0m trainer_evaluator \u001b[38;5;241m=\u001b[39m TRAINER_EVALUATOR()\n\u001b[0;32m----> 3\u001b[0m trainer_evaluator\u001b[38;5;241m.\u001b[39mtrain_cnn(model, train_loader, optimizer, loss, \u001b[38;5;241m5\u001b[39m)\n",
+      "File \u001b[0;32m~/Documents/MS/Saarland_University/Semester_1/ML/Project/trainer_evaluator.py:48\u001b[0m, in \u001b[0;36mTRAINER_EVALUATOR.train_cnn\u001b[0;34m(self, model, dataloader, optimizer, criterion, epochs, log_file, best_model_dir)\u001b[0m\n\u001b[1;32m     46\u001b[0m output \u001b[38;5;241m=\u001b[39m model(image)\n\u001b[1;32m     47\u001b[0m loss \u001b[38;5;241m=\u001b[39m criterion(output, gt)\n\u001b[0;32m---> 48\u001b[0m loss\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[1;32m     49\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mstep()\n\u001b[1;32m     51\u001b[0m total_loss \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m loss\u001b[38;5;241m.\u001b[39mitem()\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/HLCV/lib/python3.12/site-packages/torch/_tensor.py:581\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    571\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    572\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    573\u001b[0m         Tensor\u001b[38;5;241m.\u001b[39mbackward,\n\u001b[1;32m    574\u001b[0m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    579\u001b[0m         inputs\u001b[38;5;241m=\u001b[39minputs,\n\u001b[1;32m    580\u001b[0m     )\n\u001b[0;32m--> 581\u001b[0m torch\u001b[38;5;241m.\u001b[39mautograd\u001b[38;5;241m.\u001b[39mbackward(\n\u001b[1;32m    582\u001b[0m     \u001b[38;5;28mself\u001b[39m, gradient, retain_graph, create_graph, inputs\u001b[38;5;241m=\u001b[39minputs\n\u001b[1;32m    583\u001b[0m )\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/HLCV/lib/python3.12/site-packages/torch/autograd/__init__.py:347\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    342\u001b[0m     retain_graph \u001b[38;5;241m=\u001b[39m create_graph\n\u001b[1;32m    344\u001b[0m \u001b[38;5;66;03m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[1;32m    345\u001b[0m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[1;32m    346\u001b[0m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[0;32m--> 347\u001b[0m _engine_run_backward(\n\u001b[1;32m    348\u001b[0m     tensors,\n\u001b[1;32m    349\u001b[0m     grad_tensors_,\n\u001b[1;32m    350\u001b[0m     retain_graph,\n\u001b[1;32m    351\u001b[0m     create_graph,\n\u001b[1;32m    352\u001b[0m     inputs,\n\u001b[1;32m    353\u001b[0m     allow_unreachable\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m    354\u001b[0m     accumulate_grad\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m    355\u001b[0m )\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/HLCV/lib/python3.12/site-packages/torch/autograd/graph.py:825\u001b[0m, in \u001b[0;36m_engine_run_backward\u001b[0;34m(t_outputs, *args, **kwargs)\u001b[0m\n\u001b[1;32m    823\u001b[0m     unregister_hooks \u001b[38;5;241m=\u001b[39m _register_logging_hooks_on_whole_graph(t_outputs)\n\u001b[1;32m    824\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 825\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Variable\u001b[38;5;241m.\u001b[39m_execution_engine\u001b[38;5;241m.\u001b[39mrun_backward(  \u001b[38;5;66;03m# Calls into the C++ engine to run the backward pass\u001b[39;00m\n\u001b[1;32m    826\u001b[0m         t_outputs, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs\n\u001b[1;32m    827\u001b[0m     )  \u001b[38;5;66;03m# Calls into the C++ engine to run the backward pass\u001b[39;00m\n\u001b[1;32m    828\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    829\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m attach_logging_hooks:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -186,12 +204,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5ee72dd6",
+   "metadata": {},
+   "source": [
+    "### Save predictions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "75a61384",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save predicted masks\n",
+    "trainer_evaluator.save_predictions(model, train_loader)"
+   ]
   }
  ],
  "metadata": {
