Completed training loop

--- a/cnn_approach.ipynb
+++ b/cnn_approach.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "aa1ba929",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
     "from tqdm import tqdm\n",
     "from PIL import Image\n",
     "\n",
-    "from dataset_loader import SEGMENTATION_DATASET\n",
+    "from dataset_loader import TRAIN_SEGMENTATION_DATASET, TEST_SEGMENTATION_DATASET\n",
     "from cnn_model import CNN_MODEL\n",
     "from cnn_config import cnn_experiment_1\n",
     "\n",
@@ -72,13 +72,13 @@
     "])\n",
     "\n",
     "# Create dataset\n",
-    "train_dataset = SEGMENTATION_DATASET(\n",
+    "train_dataset = TRAIN_SEGMENTATION_DATASET(\n",
     "    \"/Users/tejasdhopavkar/Documents/MS/Saarland_University/Semester_1/ML/Project/dataset/training/images\",\n",
     "    \"/Users/tejasdhopavkar/Documents/MS/Saarland_University/Semester_1/ML/Project/dataset/training/ground_truth\",\n",
     "    transform\n",
     ")\n",
     "\n",
-    "test_dataset = SEGMENTATION_DATASET(\n",
+    "test_dataset = TEST_SEGMENTATION_DATASET(\n",
     "    \"/Users/tejasdhopavkar/Documents/MS/Saarland_University/Semester_1/ML/Project/dataset/test/images\",\n",
     "    transform\n",
     ")\n",
