--- a/cnn_approach.ipynb
+++ b/cnn_approach.ipynb
@@ -62,7 +62,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1, 3, 375, 500]) torch.Size([1, 3, 375, 500]) ('2009_002982.jpg',)\n"
+      "torch.Size([1, 3, 375, 500]) torch.Size([1, 3, 375, 500]) ('2008_007201.jpg',)\n"
      ]
     }
    ],
@@ -185,43 +185,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training started...\n",
-      "Epoch 0: Started training\n",
-      "tensor([[[[0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "          ...,\n",
-      "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "          [0., 0., 0.,  ..., 0., 0., 0.]],\n",
-      "\n",
-      "         [[0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "          ...,\n",
-      "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "          [0., 0., 0.,  ..., 0., 0., 0.]],\n",
-      "\n",
-      "         [[0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "          ...,\n",
-      "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "          [0., 0., 0.,  ..., 0., 0., 0.]]]], device='mps:0')\n"
+      "Training started...\n"
      ]
     },
     {
-     "ename": "IndexError",
-     "evalue": "boolean index did not match indexed array along axis 2; size of axis is 3 but size of corresponding boolean axis is 500",
+     "ename": "NameError",
+     "evalue": "name 'save_dir' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
       "Cell \u001b[0;32mIn[7], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTraining started...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m trainer_evaluator\u001b[38;5;241m.\u001b[39mtrain_cnn(model, train_loader, optimizer, loss, device, \u001b[38;5;241m5\u001b[39m)\n",
-      "File \u001b[0;32m~/Documents/MS/Saarland_University/Semester_1/ML/Project/trainer_evaluator.py:70\u001b[0m, in \u001b[0;36mTRAINER_EVALUATOR.train_cnn\u001b[0;34m(self, model, dataloader, optimizer, criterion, device, epochs, log_file, best_model_dir, save_dir)\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[38;5;66;03m# Create RGB mask\u001b[39;00m\n\u001b[1;32m     69\u001b[0m rgb_mask \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((mask\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m], mask\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m], \u001b[38;5;241m3\u001b[39m), dtype\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39muint8)\n\u001b[0;32m---> 70\u001b[0m rgb_mask[mask \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m255\u001b[39m] \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m255\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     72\u001b[0m \u001b[38;5;66;03m# Save mask with epoch, batch, and image index\u001b[39;00m\n\u001b[1;32m     73\u001b[0m save_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(save_dir, filenames[i])\n",
-      "\u001b[0;31mIndexError\u001b[0m: boolean index did not match indexed array along axis 2; size of axis is 3 but size of corresponding boolean axis is 500"
+      "File \u001b[0;32m~/Documents/MS/Saarland_University/Semester_1/ML/Project/trainer_evaluator.py:29\u001b[0m, in \u001b[0;36mTRAINER_EVALUATOR.train_cnn\u001b[0;34m(self, model, dataloader, optimizer, criterion, device, epochs, log_file, best_model_dir)\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mtrain_cnn\u001b[39m(\u001b[38;5;28mself\u001b[39m, model, dataloader, optimizer, criterion, device, epochs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m, log_file\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlogs/cnn_training_log.txt\u001b[39m\u001b[38;5;124m'\u001b[39m, best_model_dir\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmodels/cnn/\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m     28\u001b[0m     os\u001b[38;5;241m.\u001b[39mmakedirs(best_model_dir, exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m---> 29\u001b[0m     os\u001b[38;5;241m.\u001b[39mmakedirs(save_dir, exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     30\u001b[0m     best_loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minf\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     32\u001b[0m     \u001b[38;5;66;03m# Define structures for capturing loss and epochs\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'save_dir' is not defined"
      ]
     }
    ],
